--- a/BlazorWASM/Pages/CreateUser.razor
+++ b/BlazorWASM/Pages/CreateUser.razor
@@ -6,6 +6,7 @@
 
 @code {
     private string username = "";
+    private string password = "";
     private string resultMsg = "";
     private string color = "";
     
@@ -15,8 +16,9 @@
 
         try
         {
-            await userService.Create(new UserCreationDTO(username));
+            await userService.Create(new UserCreationDTO(username, password ));
             username = "";
+            password = "";
             resultMsg = "User successfully created";
             color = "green";
         }
@@ -30,7 +32,6 @@
 }
 
 <div class="card">
-    <h3>Create User</h3>
     <div class="form-group field">
         <label>User name:</label>
         <input type="text" @bind="username" @bind:event="oninput"/>
@@ -39,6 +40,14 @@
             <label style="color: @color">@resultMsg</label>
         }
     </div>
+    <div class="form-group field">
+            <label>Password:</label>
+            <input type="text" @bind="password" @bind:event="oninput"/>
+            @if (!string.IsNullOrEmpty(resultMsg))
+            {
+                <label style="color: @color">@resultMsg</label>
+            }
+        </div>
     <div class="button-row">
         <button @onclick="Create" disabled="@(string.IsNullOrEmpty(username))" class="acceptbtn">Create</button>
     </div>
